--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800&family=Sacramento&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>InvestPe</title>
   </head>
   <body>
     <div id="root"></div>
